--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="description" content="A organisation for culturing plants">
 
-  <title>AMMI Culture - Bringing green</title>
+  <title>Ammi Culture - Bringing green</title>
 
   <link rel="shortcut icon" href="icon/apple-touch-icon.png" type="image/x-icon">
 
