--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
   <meta name="description" content="A organisation for culturing plants">
 
-  <title>Ammi Culture - Bringing green</title>
+  <title>AMMI Culture - The Present is the Inheritance of the Future</title>
 
   <link rel="shortcut icon" href="icon/apple-touch-icon.png" type="image/x-icon">
 
@@ -21,8 +21,25 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
 
   <link rel="stylesheet" href="assets/css/mobster.css">
+
+  <style>
+  .map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+  }
+  .map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+  }
+  </style>
 </head>
 <body>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-floating">
   <div class="container">
@@ -62,7 +79,7 @@
     <div class="container fg-white h-100">
       <div class="row justify-content-center align-items-center text-center h-100">
         <div class="col-lg-6">
-          <h3 class="mb-4 fw-medium">About Us</h3>
+          <h3 class="mb-4 fw-medium">About</h3>
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb breadcrumb-dark justify-content-center bg-transparent">
               <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -80,20 +97,68 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="card-page">
-          <h5 class="fg-primary">Stories</h5>
+          <h4 class="fg-primary">Ammi Culture</h4>
           <hr>
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est</p>
-          <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
+          <p>Ammi Culture was originally founded in 2007 as an e-retail business for fringes and notions..</p> 
 
-          <!-- Video -->
-          <div class="text-center py-5">
+          <p>In 2014, it was rebranded to support personal and professional development, people engagement, and business strategy services.</p>
+
+          <p>More than an HR and business management consulting services, at the heart of Ammi Culture has always been the mission to foster the growth of knowledge and resources sharing in our collective communities (residential, workplace, professional, associations/interest groups).</p>
+
+          <p>No community exists in a vacuum. What we do in one directly influences what we experience through interactions with another.</p>
+
+          <p>Ammi is the Hebrew word for "My People."
+          Culture is the shared ideas, customs, beliefs, knowledge, and behaviors of a group of people (community) appreciated through generational experiences.</p>
+
+          <h3 style="text-align: center;">"My People's Culture"</h3>
+
+          <p>Because no two people, groups, or organizations are identical, Ammi Culture's services are fashioned to produce solutions that are unique to the individual, group, and organization with consideration for positive interactions of influence.</p>
+
+         
+          <!-- <div class="text-center py-5">
             <embed class="embed-video" src="https://www.youtube.com/embed/xuwV3ywCxW8">
-          </div>
-
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+          </div> -->
         </div>
-        <div class="card-page mt-3">
+        <div class="container card-page" id="kim" style="margin-top: 20px;">
+          <h4 class="fg-primary">BIO- Kim Jackson</h4>
+          <hr>
+          <div class="img-place mobile-preview shadow floating-animate" style="margin-bottom: 20px">
+            <img src="photos/pic.jpg">
+          </div>
+          <p style="font-size: 0.75em; text-align: center"><strong>BIO- Kim Jackson</strong></p>
+          <p>BIO- Kim Jackson is a staunch Business Management Professional with an expertise in Human Resources. With over 10 years of experience in the private, public, and non-profit sector she has proven the ability to drive change using realized insight and mastering the art of building relationships. Kim’s expertise and a passion for cultivating healthy, diverse, and inclusive workplace environments allows her to successfully deliver programs, policies, and processes that meet various needs across all disciplines in business.</p>
+
+
+          <p>Kim is able to operate at the highest level possible due to her dedication and desire for continued learning.She holds a BA in Global Business Management from the University of Phoenix, a MS in Human Resources Management from Villanova University, and a Certificate of Diversity and Inclusion, PHR from Cornell University. Most would say this is impressive, however Kim prides herself on her highest accomplishment which is being a mother of seven; five boys and two girls. In addition to serving the corporate world and her family, Kim has found time over the last six years to serve her local community center as well.</p>
+
+
+
+          <p>No matter what capacity, in every role, Kim has earned the respect and confidence of her colleagues. She continues to serve as professional development coach in formal and informal capacity. Whether it’s business development or servant leadership Kim continues to shine, creating impact wherever she goes, leaving an organization better than it was before she came.</p>
+        </div>
+<div class="container card-page" style="margin-top: 20px;">
+  <h4 class="fg-primary">Info</h4>
+  <hr>
+  <h5 style=""><strong>Industry</strong></h5>
+  <p>Human Resources</p><br>
+
+  <h5 style=""><strong>Headquarters</strong></h5>
+  <p><a href="https://goo.gl/maps/s2L2Jct8hyVUHgwy6">Philadelphia, PA</a></p><br>
+
+  <h5 style=""><strong>Type</strong></h5>
+  <p>Sole Proprietorship</p><br>
+
+  <h5 style=""><strong>Founded</strong></h5>
+  <p>2014</p><br>
+
+  <h5 style=""><strong>Specialties</strong></h5>
+  <p>Human Resources , Talent Acquisition Strategy, Performance Management , Compensation Strategy, Diversity and Inclusion Program Design, Employee Engagement Programs, HR Policy and Adminstration, Training and Development, Personal Development Coaching, Professional Development, and Business Management</p><br>
+
+  <div class="map-responsive">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48954.39461775105!2d-75.18168075326412!3d39.9268556282218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c62eec7cbeef%3A0x68cc266a24a8279f!2s1319%20Market%20St%20%2325%2C%20Philadelphia%2C%20PA%2019107%2C%20USA!5e0!3m2!1sen!2sbd!4v1603788132785!5m2!1sen!2sbd" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+</div>
+
+        <!-- <div class="card-page mt-3">
           <h5 class="fg-primary">Meet Our Teams</h5>
           <hr>
 
@@ -126,8 +191,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="card-page mt-3">
+        </div> -->
+        <!-- <div class="card-page mt-3">
           <h5 class="fg-primary">Partners</h5>
           <hr>
 
@@ -173,7 +238,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
