--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="description" content="A organisation for culturing plants">
 
-  <title>Ammi Culture - Bringing green</title>
+  <title>AMMI Culture - The Present is the Inheritance of the Future</title>
 
   <link rel="shortcut icon" href="icon/apple-touch-icon.png" type="image/x-icon">
 
@@ -60,16 +60,9 @@
     <div class="container fg-white h-100">
       <div class="row align-items-center h-100">
         <div class="col-lg-6 wow fadeInUp">
-          <div class="badge badge-soft mb-2">#1 A green lover.</div>
-          <h1 class="mb-4 fw-normal">Lorem iiosum dolor sit amet</h1>
-          <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <a href="#" class="blog.html">Learn More</a>
+          <div class="badge badge-soft mb-2"># Intrinsic People and Business Solutions.</div>
+          <h1 class="mb-4 fw-normal">The Present is the Inheritance of Future</h1>
+          <p class="mb-4">BIO- Kim Jackson is a staunch Business Management Professional with an expertise in Human Resources. With over 10 years of experience in the private, public, and non-profit sector she has proven the ability to drive change using realized insight and mastering the art of building relationships. Kim’s expertise and a passion for cultivating healthy, diverse, and inclusive workplace environments allows her to successfully deliver programs, policies, and processes that meet various needs across all disciplines in business....<a href="about.html#kim" class="blog.html" style="color: #00E3DB">Learn More</a></p>
 
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
@@ -82,7 +75,8 @@
   </div>
 </div>
 
-<div class="page-section no-scroll">
+<!-- Feature area -->
+<!-- <div class="page-section no-scroll">
   <div class="container">
     <h2 class="text-center wow fadeIn">Our Main Features</h2>
 
@@ -120,7 +114,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="page-section no-scroll">
   <div class="container">
@@ -131,9 +125,21 @@
         </div>
       </div>
       <div class="col-lg-5 pl-lg-5 wow fadeInUp">
-        <h2 class="mb-4">All kind of business tools integration</h2>
-        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia repellendus illo, possimus magni cumque, voluptatem et necessitatibus consequatur perspiciatis laborum temporibus sint dolorem porro, eaque quo sequi. Tempora, voluptates quibusdam?</p>
-        <a href="#" class="btn btn-outline-primary rounded-pill">See Addons</a>
+        <h2 class="mb-4">Ammi Culture</h2>
+        <p class="mb-4">Ammi Culture was originally founded in 2007 as an e-retail business for fringes and notions..</p> 
+
+          <p class="mb-4">In 2014, it was rebranded to support personal and professional development, people engagement, and business strategy services.</p>
+
+          <p class="mb-4">More than an HR and business management consulting services, at the heart of Ammi Culture has always been the mission to foster the growth of knowledge and resources sharing in our collective communities (residential, workplace, professional, associations/interest groups).</p>
+
+          <p class="mb-4">No community exists in a vacuum. What we do in one directly influences what we experience through interactions with another.</p>
+
+          <p class="mb-4">Ammi is the Hebrew word for "My People."
+          Culture is the shared ideas, customs, beliefs, knowledge, and behaviors of a group of people (community) appreciated through generational experiences.</p>
+
+          <h3 style="text-align: center;">"My People's Culture"</h3>
+
+          <p class="mb-4">Because no two people, groups, or organizations are identical, Ammi Culture's services are fashioned to produce solutions that are unique to the individual, group, and organization with consideration for positive interactions of influence.</p>
       </div>
     </div>
   </div>
@@ -243,7 +249,7 @@
           </div>
           <div class="avatar-caption">
             <p class="mb-0 fw-medium fg-primary">Zuabyer Rahman</p>
-            <div class="fs-vsmall fw-medium">Green lover</div>
+            <div class="fs-vsmall fw-medium">Recruiter- freelancing.com</div>
           </div>
         </div>
       </div>
@@ -264,7 +270,7 @@
           </div>
           <div class="avatar-caption">
             <p class="mb-0 fw-medium fg-primary">Galih Raugana</p>
-            <div class="fs-vsmall fw-medium">Tree plantation hobbiest</div>
+            <div class="fs-vsmall fw-medium">CEO- Apple Inc.</div>
           </div>
         </div>
       </div>
@@ -284,8 +290,8 @@
             <img src="assets/img/person/person_3.png" alt="">
           </div>
           <div class="avatar-caption">
-            <p class="mb-0 fw-medium fg-primary">Galih Raugana</p>
-            <div class="fs-vsmall fw-medium">Environmentalist</div>
+            <p class="mb-0 fw-medium fg-primary">Jeremy Bing</p>
+            <div class="fs-vsmall fw-medium">Chief employer- Google Inc.</div>
           </div>
         </div>
       </div>
@@ -460,7 +466,7 @@
           <img src="icon/apple-touch-icon.png" alt="IMG" height="80">
         </div>
         <h3 class="mb-3"><span class="fg-primary">AMMI</span>CULTURE</h3>
-        <p class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Expedita voluptates earum minima reiciendis consectetur veniam aut dignissimos</p>
+        <p class="caption">Intrinsic People and Business Solutions</p>
 
         <ul class="nav justify-content-center py-3">
           <li class="nav-item"><a href="index-2.html" class="nav-link fg-white px-4">Home</a></li>
@@ -475,7 +481,20 @@
   
   <hr>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6 py-2">
+        <ul class="nav justify-content-end">
+          <li class="nav-item"><a href="#" class="nav-link">Terms of Use</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Privacy Policy</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Cookie Policy</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
+
+
 
 <script src="assets/js/jquery-3.5.1.min.js"></script>
 
