--- a/blog-details.html
+++ b/blog-details.html
@@ -8,7 +8,7 @@
 
   <meta name="description" content="A organisation for culturing plants">
 
-  <title>Ammi Culture - Bringing green</title>
+  <title>AMMI Culture - The Present is the Inheritance of the Future</title>
 
   <link rel="shortcut icon" href="icon/apple-touch-icon.png" type="image/x-icon">
 
