--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
   <meta name="description" content="A organisation for culturing plants">
 
-  <title>Ammi Culture - Bringing green</title>
+  <title>AMMI Culture - The Present is the Inheritance of the Future</title>
 
   <link rel="shortcut icon" href="icon/apple-touch-icon.png" type="image/x-icon">
 
@@ -84,7 +84,7 @@
               <div class="col-md-4 text-center py-3 py-md-2">
                 <i class="mai-location-outline h3"></i>
                 <p class="fg-primary fw-medium fs-vlarge">Location</p>
-                <p class="mb-0">3 East Ridgewood Avenue Los Angeles, CA 90022</p>
+                <p class="mb-0">1319 Market St, Philadelphia, PA 19107, USA</p>
               </div>
               <div class="col-md-4 text-center py-3 py-md-2">
                 <i class="mai-call-outline h3"></i>
