--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-6 wow fadeIn">
-        <h2>Meet client satisfaction by using product</h2>
+        <h2>Satisfactory comments from some of many customers!</h2>
       </div>
     </div>
   </div>
