--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
 
 <!-- Testimonials -->
-<div class="page-section">
+<div class="page-section" id="Testimonials">
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-6 wow fadeIn">
@@ -472,7 +472,7 @@
           <li class="nav-item"><a href="index-2.html" class="nav-link fg-white px-4">Home</a></li>
           <li class="nav-item"><a href="" class="nav-link fg-white px-4">Key Features</a></li>
           <li class="nav-item"><a href="" class="nav-link fg-white px-4">Pricing</a></li>
-          <li class="nav-item"><a href="" class="nav-link fg-white px-4">Testimonials</a></li>
+          <li class="nav-item"><a href="#Testimonials" class="nav-link fg-white px-4">Testimonials</a></li>
           <li class="nav-item"><a href="" class="nav-link fg-white px-4">FAQ</a></li>
         </ul>
       </div>
